--- a/SHS-014-V/Src/For Approval%28Approver1%29.fx.yaml
+++ b/SHS-014-V/Src/For Approval%28Approver1%29.fx.yaml
@@ -2051,7 +2051,7 @@
                     TextInput1_8.Text,
                     JSON(ValueofId)
                 );
-                UpdateContext({Sendforapproval: false});
+                UpdateContext({rejectpopup: false});
                 Notify(
                     "The study is Rejected successfully",
                     NotificationType.Success
