--- a/SHS-014-V/Src/For Approval%28Approver1%29.fx.yaml
+++ b/SHS-014-V/Src/For Approval%28Approver1%29.fx.yaml
@@ -1993,7 +1993,7 @@
                     );
                     UpdateContext({Sendforapproval: false});
                     Notify(
-                        "The study is send for Approval Process successfully",
+                        "The initiative is approved successfully",
                         NotificationType.Success
                     );
                 Text: ="Confirm"
