--- a/SHS-014-V/Src/For Approval%28Approver2%29.fx.yaml
+++ b/SHS-014-V/Src/For Approval%28Approver2%29.fx.yaml
@@ -357,7 +357,7 @@
                 DelayItemLoading: =true
                 Items: |-
                     =Filter(
-                        'Divisions With Study',
+                        'Divisions With Study','Perf Year'=VarCurrentYear.Value,
                         Title = "approver2",
                         StartsWith(
                             'Study Name',
