--- a/SHS-014-V/Src/For Approval 3.fx.yaml
+++ b/SHS-014-V/Src/For Approval 3.fx.yaml
@@ -2051,7 +2051,7 @@
                     TextInput1_12.Text,
                     JSON(ValueofId)
                 );
-                UpdateContext({Sendforapproval: false});
+                UpdateContext({rejectpopup: false});
                 Notify(
                     "The study is send for Approval Process successfully",
                     NotificationType.Success
