--- a/SHS-014-V/Src/For Approval 3.fx.yaml
+++ b/SHS-014-V/Src/For Approval 3.fx.yaml
@@ -991,7 +991,7 @@
 
             Gallery_study_12 As gallery.galleryVertical:
                 DelayItemLoading: =true
-                Items: =Filter('Initiative List',Progress="Approval3")
+                Items: =Filter('Initiative List',PerfYear=VarCurrentYear.Value,Progress="Approval3")
                 Layout: =Layout.Vertical
                 LayoutMinHeight: =287
                 LayoutMinWidth: =320
