--- a/SHS-014-V/Src/Upload Result.fx.yaml
+++ b/SHS-014-V/Src/Upload Result.fx.yaml
@@ -854,7 +854,7 @@
                     =If(
                         Not(
                             EndsWith(
-                                First(DataCardValue82_1.Attachments).Name,
+                                First(DataCardValue82_5.Attachments).Name,
                                 ".xlsx"
                             )
                         ),
@@ -866,11 +866,11 @@
                             Data,
                             ImportAndRead.Run(
                                 Gallery_study_1.Selected.ID,
-                                First(DataCardValue82_1.Attachments).Name,
+                                First(DataCardValue82_5.Attachments).Name,
                                 {
                                     file: {
-                                        contentBytes: First(DataCardValue82_1.Attachments).Value,
-                                        name: First(DataCardValue82_1.Attachments).Name
+                                        contentBytes: First(DataCardValue82_5.Attachments).Value,
+                                        name: First(DataCardValue82_5.Attachments).Name
                                     }
                                 }
                             ).outputfornotification
@@ -890,7 +890,7 @@
                 PressedColor: =Self.Color
                 PressedFill: =Self.Fill
                 Text: ="Import"
-                Visible: =If(IsBlank(First(DataCardValue82_1.Attachments).Name),false,true)
+                Visible: =If(IsBlank(First(DataCardValue82_.Attachments).Name),false,true)
                 Width: =150
                 ZIndex: =4
 
