--- a/SHS-014-V/Src/Upload Result.fx.yaml
+++ b/SHS-014-V/Src/Upload Result.fx.yaml
@@ -759,7 +759,43 @@
                 Fill: =RGBA(9, 232, 206, 1)
                 HoverColor: =RGBA(255, 0, 0, 1)
                 HoverFill: =RGBA(9, 232, 206, 1)
-                OnSelect: =
+                OnSelect: |-
+                    =If(
+                        Not(
+                            EndsWith(
+                                First(DataCardValue82_4.Attachments).Name,
+                                ".xlsx"
+                            )
+                        ),
+                        Notify(
+                            "Only xlsx files are allowed",
+                            NotificationType.Error
+                        ),
+                        Set(
+                            Data,
+                            'Copyof-ImportAndRead4th'.Run(
+                                Gallery_study_1.Selected.ID,
+                                First(DataCardValue82_4.Attachments).Name,
+                                {
+                                    file: {
+                                        contentBytes: First(DataCardValue82_4.Attachments).Value,
+                                        name: First(DataCardValue82_4.Attachments).Name
+                                    }
+                                }
+                            ).outputfornotification
+                        );
+                        If(
+                            Data = "True",
+                            Notify(
+                                "Imported",
+                                NotificationType.Success
+                            ),
+                            Notify(
+                                "Enter VAlid File",
+                                NotificationType.Warning
+                            )
+                        )
+                    )
                 PressedColor: =Self.Color
                 PressedFill: =Self.Fill
                 Text: ="Import"
@@ -828,7 +864,7 @@
                         ),
                         Set(
                             Data,
-                            ImportAndRead.Run(
+                            'Copyof-ImportAndRead5th'.Run(
                                 Gallery_study_1.Selected.ID,
                                 First(DataCardValue82_5.Attachments).Name,
                                 {
