--- a/SHS-014-V/Src/Upload Result.fx.yaml
+++ b/SHS-014-V/Src/Upload Result.fx.yaml
@@ -487,8 +487,7 @@
                 HoverColor: =RGBA(255, 0, 0, 1)
                 HoverFill: =RGBA(9, 232, 206, 1)
                 OnSelect: |-
-                    =
-                    
+                    =UpdateContext({btnvisible1:false});
                     If(
                         Not(
                             EndsWith(
@@ -580,7 +579,8 @@
                 HoverColor: =RGBA(255, 0, 0, 1)
                 HoverFill: =RGBA(9, 232, 206, 1)
                 OnSelect: |-
-                    =If(
+                    =UpdateContext({btnvisible2:false})
+                    If(
                         Not(
                             EndsWith(
                                 First(DataCardValue82_2.Attachments).Name,
@@ -615,7 +615,8 @@
                                 NotificationType.Warning
                             )
                         )
-                    )
+                    );
+                    UpdateContext({btnvisible2:true}
                 PressedColor: =Self.Color
                 PressedFill: =Self.Fill
                 Text: ="Import"
