--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -799,11 +799,12 @@
                 Checkbox2 As checkbox:
                     FillPortions: =1
                     LayoutMinWidth: =50
-                    OnSelect: |-
+                    OnCheck: |-
                         =ForAll(
                             Filter(Gallery_study_3.AllItems,Checkbox2_3.Value=true),
                             Collect(ValueofId,ThisRecord.ID)
                         );
+                    OnSelect: =
                     Text: =""
                     ZIndex: =1
 
