--- a/SHS-014-V/Src/Components/Component1.fx.yaml
+++ b/SHS-014-V/Src/Components/Component1.fx.yaml
@@ -361,6 +361,7 @@ Component1 As CanvasComponent:
             Label6_6 As label:
                 Align: =Align.Center
                 Color: =RGBA(255, 255, 255, 1)
+                Font: =Font.Georgia
                 FontWeight: =FontWeight.Bold
                 Height: =60
                 OnSelect: =Set(ShowMenuadmin, !ShowMenuadmin)
