--- a/SHS-014-V/Src/Division.fx.yaml
+++ b/SHS-014-V/Src/Division.fx.yaml
@@ -15,15 +15,6 @@ Division As screen:
         Y: =DivComp.ComHeaderHeight
         ZIndex: =2
 
-        Arrow1_4 As arrow.backArrow:
-            Fill: =RGBA(0, 18, 107, 1)
-            Height: =30
-            OnSelect: =Navigate(Administration)
-            Width: =30
-            X: =10
-            Y: =17
-            ZIndex: =1
-
         Container20 As groupContainer.horizontalAutoLayoutContainer:
             DropShadow: =DropShadow.None
             FillPortions: =0
@@ -74,6 +65,8 @@ Division As screen:
                         BorderThickness: =1
                         Default: =""
                         DelayOutput: =true
+                        FocusedBorderThickness: |
+                            =2
                         HintText: ="Search"
                         HoverBorderColor: =RGBA(0, 0, 0, 1)
                         HoverFill: =RGBA(255, 255, 255, 1)
@@ -103,8 +96,8 @@ Division As screen:
                         OnSelect: =Set(search_name,"");Reset(TextInput1_2)
                         Visible: =If(IsBlank(TextInput1_2.Text),false,true)
                         Width: =28
-                        X: =202
-                        Y: =27
+                        X: =222
+                        Y: =25
                         ZIndex: =3
 
                 Container25_28 As groupContainer.manualLayoutContainer:
@@ -1558,6 +1551,7 @@ Division As screen:
 
                         DataCardKey83 As label:
                             AutoHeight: =true
+                            Color: =RGBA(0, 0, 0, 1)
                             FontWeight: =FontWeight.Semibold
                             Height: =34
                             Size: =15
@@ -1570,9 +1564,15 @@ Division As screen:
 
                         DataCardValue83 As combobox:
                             BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                            ChevronBackground: =Color.White
+                            ChevronFill: =Color.Black
+                            ChevronHoverBackground: =Color.White
+                            ChevronHoverFill: =Color.Black
                             DefaultSelectedItems: =Parent.Default
                             DisplayFields: =["Value"]
                             DisplayMode: =Parent.DisplayMode
+                            FocusedBorderThickness: |
+                                =2
                             Items: =Choices([@Division_1].Factors)
                             PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                             SearchFields: =["Value"]
